explicitly place decorationpane in the scene graph to avoid app resizing issues