@@ -105,6 +105,7 @@ run {
                                  "--add-opens=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
                                  "--add-opens=javafx.controls/javafx.scene.control.cell=com.sparrowwallet.sparrow",
                                  "--add-opens=org.controlsfx.controls/impl.org.controlsfx.skin=com.sparrowwallet.sparrow",
+                                 "--add-opens=org.controlsfx.controls/impl.org.controlsfx.skin=javafx.fxml",
                                  "--add-opens=javafx.graphics/com.sun.javafx.tk=centerdevice.nsmenufx",
                                  "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=centerdevice.nsmenufx",
                                  "--add-opens=javafx.graphics/com.sun.glass.ui=centerdevice.nsmenufx",
@@ -143,6 +144,7 @@ jlink {
                    "--add-opens=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
                    "--add-opens=javafx.controls/javafx.scene.control.cell=com.sparrowwallet.sparrow",
                    "--add-opens=org.controlsfx.controls/impl.org.controlsfx.skin=com.sparrowwallet.sparrow",
+                   "--add-opens=org.controlsfx.controls/impl.org.controlsfx.skin=javafx.fxml",
                    "--add-opens=javafx.graphics/com.sun.javafx.tk=com.sparrowwallet.merged.module",
                    "--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=com.sparrowwallet.merged.module",
                    "--add-opens=javafx.graphics/com.sun.glass.ui=com.sparrowwallet.merged.module",
